# trifecta

./: .gitignore  .travis.yml  CHANGELOG.markdown  LICENSE  README.markdown  TODO  Text-Trifecta-Combinators.html  Text-Trifecta-Delta.html  Text-Trifecta-Highlight.html  Text-Trifecta-Parser.html  Text-Trifecta-Rendering.html  Text-Trifecta-Result.html  Text-Trifecta-Rope.html  Text-Trifecta-Util-Array.html  Text-Trifecta-Util-IntervalMap.html  Text-Trifecta-Util-It.html  Text-Trifecta.html  cabal.haskell-ci  doc-index-46.html  doc-index-58.html  doc-index-60.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  (+20 more)
.github/workflows/: haskell-ci.yml
Text/: Trifecta.hs
Text/Trifecta/: .ReducerTree.hs.swp  ByteSet.hs  Bytes.hs  Caret.hs  CharSet.hs  Cursor.hs  Delta.hs  Diagnostic.hs  Fixit.hs  Highlight.hs  Hunk.hs  IntervalMap.hs  It.hs  Iteratee.hs  Language.hs  Literate.hs  Parser.hs  Path.hs  Render.hs  Rendered.hs  Rope.hs  Sid.hs  Slice.hs  Span.hs  Strand.hs  Summary.hs  Supply.hs  Tally.hs  Util.hs
Text/Trifecta/CharSet/: AsciiSet.hs  Common.hs  Posix.hs  Prim.hs  Unicode.hs
Text/Trifecta/CharSet/Posix/: Ascii.hs  Unicode.hs
Text/Trifecta/CharSet/Unicode/: Block.hs  Category.hs
Text/Trifecta/Diagnostic/: Class.hs  Combinators.hs  Err.hs  Level.hs  Prim.hs  Rendering.hs
Text/Trifecta/Diagnostic/Err/: Log.hs  State.hs
Text/Trifecta/Diagnostic/Rendering/: Caret.hs  Fixit.hs  Prim.hs  Span.hs
Text/Trifecta/Highlight/: Class.hs  Effects.hs  Prim.hs
Text/Trifecta/Highlight/Rendering/: HTML.hs
Text/Trifecta/Highlighter/: Class.hs  HTML.hs
Text/Trifecta/Language/: Combinators.hs  Monad.hs  Style.hs
Text/Trifecta/Layout/: Class.hs  Combinators.hs  Monad.hs  Prim.hs
Text/Trifecta/Literate/: Class.hs  Combinators.hs  Monad.hs  Prim.hs
Text/Trifecta/Parser/: ByteString.hs  Char.hs  Char8.hs  Class.hs  Combinators.hs  Err.hs  Haskell.hs  It.hs  Language.hs  Layout.hs  Literals.hs  Literate.hs  Mark.hs  Perm.hs  Prim.hs  Result.hs  Rich.hs  Step.hs  Token.hs
Text/Trifecta/Parser/Err/: State.hs
Text/Trifecta/Parser/Identifier/: Style.hs
Text/Trifecta/Parser/Language/: Class.hs  Combinators.hs  Def.hs  Monad.hs  Prim.hs  Style.hs
Text/Trifecta/Parser/Layout/: Class.hs  Combinators.hs  Monad.hs  Prim.hs
Text/Trifecta/Parser/Literate/: Class.hs  Combinators.hs  Monad.hs  Prim.hs
Text/Trifecta/Parser/Token/: Class.hs  Combinators.hs  Highlight.hs  Identifier.hs  Prim.hs  Style.hs
Text/Trifecta/Parser/Token/Identifier/: Style.hs
Text/Trifecta/Render/: Caret.hs  Fixit.hs  Prim.hs  Span.hs
Text/Trifecta/Rope/: Bytes.hs  Delta.hs  Highlighted.hs  Hunk.hs  Path.hs  Prim.hs  Strand.hs
Text/Trifecta/Util/: Array.hs  ByteSet.hs  MaybePair.hs
examples/: LICENSE  Main.hs  RFC2616-malformed.txt  RFC2616.hs  RFC2616.txt  Spec.hs  trifecta-examples.cabal
examples/rfc2616/: RFC2616.hs
src/: Text-Trifecta-Combinators.html  Text-Trifecta-Delta.html  Text-Trifecta-Highlight.html  Text-Trifecta-Instances.html  Text-Trifecta-Parser.html  Text-Trifecta-Rendering.html  Text-Trifecta-Result.html  Text-Trifecta-Rope.html  Text-Trifecta-Util-Array.html  Text-Trifecta-Util-Combinators.html  Text-Trifecta-Util-IntervalMap.html  Text-Trifecta-Util-It.html  Text-Trifecta.html
src/Text/: Trifecta.hs
src/Text/Trifecta/: Combinators.hs  Delta.hs  Highlight.hs  Instances.hs  IntervalMap.hs  Layout.hs  Parser.hs  Pretty.hs  Rendering.hs  Result.hs  Rope.hs  Tutorial.hs
src/Text/Trifecta/Diagnostic/: Combinators.hs  Prim.hs  Rendering.hs
src/Text/Trifecta/Diagnostic/Rendering/: Caret.hs  Fixit.hs  Prim.hs  Span.hs
src/Text/Trifecta/Highlight/: Effects.hs
src/Text/Trifecta/Highlight/Rendering/: HTML.hs
src/Text/Trifecta/Language/: Class.hs  Monad.hs  Prim.hs
src/Text/Trifecta/Layout/: Combinators.hs  Prim.hs
src/Text/Trifecta/Literate/: Monad.hs
src/Text/Trifecta/Parser/: ByteString.hs  Char.hs  Class.hs  Expr.hs  Identifier.hs  It.hs  Perm.hs  Result.hs  Rich.hs  Token.hs
src/Text/Trifecta/Parser/Token/: Prim.hs
src/Text/Trifecta/Util/: Array.hs  Combinators.hs  IntervalMap.hs  It.hs  Pretty.hs
tests/: QuickCheck.hs  doctests.hs
wip/: Rat.hs  Womprat.hs
