name:          trifecta
category:      Text, Parsing, Diagnostics, Pretty Printer, Logging
version:       1.6.2
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/trifecta/
bug-reports:   http://github.com/ekmett/trifecta/issues
copyright:     Copyright (C) 2010-2015 Edward A. Kmett
synopsis:      A modern parser combinator library with convenient diagnostics
description:
  A modern parser combinator library with slicing and Clang-style colored diagnostics

build-type:    Custom

extra-source-files: examples/RFC2616.hs examples/RFC2616.txt .travis.yml README.markdown

source-repository head
  type: git
  location: https://github.com/ekmett/trifecta

library
  exposed-modules:
    Text.Trifecta
    Text.Trifecta.Combinators
    Text.Trifecta.Delta
    Text.Trifecta.Highlight
    Text.Trifecta.Parser
    Text.Trifecta.Rendering
    Text.Trifecta.Result
    Text.Trifecta.Rope
    Text.Trifecta.Util.Array
    Text.Trifecta.Util.IntervalMap
    Text.Trifecta.Util.It

  other-modules:
    Text.Trifecta.Instances
    Text.Trifecta.Util.Combinators

  build-depends:
    ansi-wl-pprint       >= 0.6.6   && < 0.7,
    ansi-terminal        >= 0.6     && < 0.7,
    array                >= 0.3.0.2 && < 0.6,
    base                 >= 4.4     && < 5,
    blaze-builder        >= 0.3.0.1 && < 0.5,
    blaze-html           >= 0.5     && < 0.10,
    blaze-markup         >= 0.5     && < 0.9,
    bytestring           >= 0.9.1   && < 0.11,
    charset              >= 0.3.5.1 && < 1,
    comonad              >= 4       && < 6,
    containers           >= 0.3     && < 0.6,
    deepseq              >= 1.2.0.1 && < 1.5,
    fingertree           >= 0.1     && < 0.2,
    ghc-prim,
    hashable             >= 1.2.1   && < 1.3,
    lens                 >= 4.0     && < 5,
    mtl                  >= 2.0.1   && < 2.3,
    parsers              >= 0.12.1  && < 1,
    profunctors          >= 4.0     && < 6,
    reducers             >= 3.10    && < 4,
    semigroups           >= 0.8.3.1 && < 1,
    transformers         >= 0.2     && < 0.6,
    unordered-containers >= 0.2.1   && < 0.3,
    utf8-string          >= 0.3.6   && < 1.1

  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -O2 -Wall -fobject-code


test-suite doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  ghc-options:      -Wall -threaded
  hs-source-dirs:   tests
  default-language: Haskell2010
  build-depends:
    base,
    directory >= 1.0,
    doctest   >= 0.9.1,
    filepath

test-suite quickcheck
  type:    exitcode-stdio-1.0
  main-is: QuickCheck.hs
  default-language: Haskell2010
  build-depends:
    base == 4.*,
    parsers,
    QuickCheck,
    trifecta
  ghc-options: -Wall -threaded
  hs-source-dirs: tests

