name:          trifecta
category:      Text, Parsing, Diagnostics, Pretty Printer, Logging
version:       2.1
license:       BSD3
cabal-version: 1.18
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/trifecta/
bug-reports:   http://github.com/ekmett/trifecta/issues
copyright:     Copyright (C) 2010-2017 Edward A. Kmett
synopsis:      A modern parser combinator library with convenient diagnostics
description:
  A modern parser combinator library with slicing and Clang-style colored diagnostics
  .
  For example:
  .
  <<https://i.imgur.com/ZyzUSSn.png>>
  .
  <images/example.png (Local Copy)>

build-type:    Custom
tested-with:   GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.1

extra-doc-files:
  images/*.png

extra-source-files:
  examples/*.hs
  examples/LICENSE
  examples/rfc2616/*.hs
  examples/RFC2616.txt
  examples/trifecta-examples.cabal
  .travis.yml
  CHANGELOG.markdown
  README.markdown
  Warning.hs

source-repository head
  type: git
  location: https://github.com/ekmett/trifecta

custom-setup
  setup-depends:
    base          >= 4 && < 5,
    Cabal,
    cabal-doctest >= 1 && < 1.1

library
  exposed-modules:
    Text.Trifecta
    Text.Trifecta.Combinators
    Text.Trifecta.Delta
    Text.Trifecta.Highlight
    Text.Trifecta.Parser
    Text.Trifecta.Rendering
    Text.Trifecta.Result
    Text.Trifecta.Rope
    Text.Trifecta.Tutorial
    Text.Trifecta.Util.IntervalMap
    Text.Trifecta.Util.It

  other-modules:
    Text.Trifecta.Util.Combinators
    Text.Trifecta.Util.Pretty

  build-depends:
    ansi-terminal               >= 0.6     && < 0.11,
    array                       >= 0.3.0.2 && < 0.6,
    base                        >= 4.7     && < 5,
    blaze-builder               >= 0.3.0.1 && < 0.5,
    blaze-html                  >= 0.5     && < 0.10,
    blaze-markup                >= 0.5     && < 0.9,
    bytestring                  >= 0.9.1   && < 0.11,
    charset                     >= 0.3.5.1 && < 1,
    comonad                     >= 4       && < 6,
    containers                  >= 0.3     && < 0.7,
    deepseq                     >= 1.2.0.1 && < 1.5,
    fingertree                  >= 0.1     && < 0.2,
    ghc-prim,
    hashable                    >= 1.2.1   && < 1.4,
    lens                        >= 4.0     && < 5,
    mtl                         >= 2.0.1   && < 2.3,
    parsers                     >= 0.12.1  && < 1,
    prettyprinter               >= 1.2     && < 2,
    prettyprinter-ansi-terminal >= 1.1     && < 2,
    profunctors                 >= 4.0     && < 6,
    reducers                    >= 3.10    && < 4,
    semigroups                  >= 0.8.3.1 && < 1,
    transformers                >= 0.2     && < 0.6,
    unordered-containers        >= 0.2.1   && < 0.3,
    utf8-string                 >= 0.3.6   && < 1.1

  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -O2 -Wall -fobject-code

  -- See https://ghc.haskell.org/trac/ghc/wiki/Migration/8.0#base-4.9.0.0
  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances
    if !impl(ghc >= 8.8)
      ghc-options: -Wnoncanonical-monadfail-instances
  else
    build-depends: fail == 4.9.*

test-suite doctests
  type:              exitcode-stdio-1.0
  main-is:           doctests.hs
  ghc-options:       -Wall -threaded
  x-doctest-options: -fobject-code
  hs-source-dirs:    tests
  default-language:  Haskell2010
  build-depends:
    base,
    doctest >= 0.11.1 && < 0.17,
    trifecta

test-suite quickcheck
  type:    exitcode-stdio-1.0
  main-is: QuickCheck.hs
  default-language: Haskell2010
  build-depends:
    base == 4.*,
    parsers,
    QuickCheck,
    trifecta
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
